--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <nav class="navbar navbar-light" style="background-color: #00CED8;">
-      <span class="navbar-brand mb-0 h1">Movies</span>
-    </nav>
+    
     <div id="root"></div>
+
+    <div id="canvas">
+
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
